CSSFontFaceSrcValue.cssText should be quoted consistently with other browsers https://bugs.webkit.org/show_bug.cgi?id=230273 <rdar://problem/79644124>

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

This is being upstreamed in https://github.com/web-platform-tests/wpt/pull/30784.

* web-platform-tests/css/css-fonts/font-family-src-quoted-expected.txt: Added.
* web-platform-tests/css/css-fonts/font-family-src-quoted.html: Added.
* web-platform-tests/css/cssom/cssom-fontfacerule-expected.txt:

Source/WebCore:

In a src: line like "src: local(foobar)", Firefox and Chrome will both quote
"foobar" when reading out of the OM. Same thing with "src: url(foobar)".
We should match them.

Test: imported/w3c/web-platform-tests/css/css-fonts/font-family-src-quoted.html

* css/CSSFontFaceSrcValue.cpp:
(WebCore::CSSFontFaceSrcValue::customCSSText const):
* css/CSSMarkup.cpp:
(WebCore::serializeIdentifier):
(WebCore::serializeString):

Source/WTF:

* wtf/unicode/CharacterNames.h:

LayoutTests:

* fast/css/font-face-src-parsing-expected.txt:

Canonical link: https://commits.webkit.org/241674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282415 268f45cc-cd09-0410-ab3c-d52691b4dbfc